manifest/karakeep/karakeep-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karakeep
  namespace: karakeep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karakeep
  template:
    metadata:
      labels:
        app: karakeep
    spec:
      containers:
        - name: karakeep
          image: ghcr.io/karakeep-app/karakeep:release
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: karakeep-data
