manifest/karakeep/meilisearch-serivce.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: karakeep
spec:
  selector:
    app: meilisearch
  ports:
    - port: 7700
      targetPort: 7700
