manifest/karakeep/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: karakeep-gateway
  namespace: karakeep
spec:
  gatewayClassName: cilium
  addresses:
  - type: IPAddress
    value: "192.168.11.159"
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "karakeep.nguyenvietkhoi.io.vn"
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "karakeep.nguyenvietkhoi.io.vn"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: karakeep-certificate-secret
