manifest/karakeep/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karakeep-httproute
  namespace: karakeep
spec:
  parentRefs:
  - name: karakeep-gateway
    namespace: karakeep
  hostnames:
  - karakeep.nguyenvietkhoi.io.vn
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: karakeep
      port: 3000
